Fix stretched mode direction, auto Fit All, reorder dropdown, update author hover
- Stretched mode: Use scaleX(1.5) instead of scaleY for horizontal stretch
- Move Stretched option to bottom of map display mode dropdown
- Auto Fit All: 1 second after first peer load + after every map mode change
- Author link hover: "Visit mbhillrn MBCore repository: GitHub"

--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -571,9 +571,9 @@ html, body {
     width: 100%;
 }
 
-/* Stretched map mode - vertically stretches tiles to show more latitude range */
+/* Stretched map mode - horizontally stretches tiles to show more of the world */
 .map-container.map-stretched {
-    transform: scaleY(2.2);
+    transform: scaleX(1.5);
     transform-origin: center center;
 }
 
